# txsettle

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/web/: .env.example  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/faucet/: route.ts
apps/web/app/market/[address]/: page.tsx
apps/web/components/: claim-card.tsx  faucet-button.tsx  footer.tsx  market-detail.tsx  markets-section.tsx  nav.tsx  place-bet.tsx  pools-bar.tsx  proof-panel.tsx  resolve-card.tsx  solana-providers.tsx  ui.tsx
apps/web/lib/: config.ts  fixtures.ts  format.ts  markets.ts  rpc.ts  settlement.ts
apps/web/lib/idl/: txsettle_market.json  txsettle_market.ts
docs/: technical-overview.md
idls/: txoracle.json
programs/txsettle_market/: Cargo.toml
programs/txsettle_market/src/: errors.rs  lib.rs  state.rs
programs/txsettle_market/src/instructions/: claim.rs  create_market.rs  mod.rs  place.rs  resolve.rs
scripts/: e2e-devnet.ts
tests/: txsettle_market.test.ts
